# efficientparafoilgrid

./: CMakeLists.txt  attributes.cpp  attributes.h  cmdlineoptions.cpp  cmdlineoptions.h  main.cpp  main.h  parameters.cpp  parameters.h  state.cpp  state.h  visualizer.cpp  visualizer.h
